--- a/proyecto-vite/src/App.css
+++ b/proyecto-vite/src/App.css
@@ -1,6 +1,6 @@
 /*body */
 body {
-  font-family: sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: black;
   background-color: white; 
   
@@ -12,12 +12,12 @@ body {
   display: flex;
   justify-content: space-between;
   text-align: center;
+  margin-top: 60px
  }
 
  .velos img{
 width: 400px;
 padding: 10px;
-margin: 4px;
  }
 
  .cards button{
