--- a/proyecto-vite/src/views/Cart/Cart.css
+++ b/proyecto-vite/src/views/Cart/Cart.css
@@ -2,7 +2,7 @@
 .product1 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 }
 .image {
@@ -23,7 +23,10 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
-    
+.basket {
+    margin-bottom: 100px;
+    border: solid black 2px;
+}
 .tarjeta {
     margin-top: 32px;
         border-radius: 8px;
