--- a/proyecto-vite/src/App.css
+++ b/proyecto-vite/src/App.css
@@ -1,7 +1,7 @@
 /*body */
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color:#FEFBF4; 
+  background-color:#ffffff; 
   
 }
 
